--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "seravo/wp-palvelu-plugin",
-  "type": "wordpress-mu-plugin",
+  "type": "wordpress-muplugin",
   "license": "MIT",
   "description": "Wordpress Mu-Plugin for wordpress instances in wp-palvelu.",
   "homepage": "http://seravo.fi",
