fix typo from purge-cache-module and enhance README

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
   ],
   "keywords": [
     "wordpress", "wp", "wp-palvelu"
-  ]
+  ],
+  "require": {
+    "composer/installers": "v1.0.12"
+  }
 }
