--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
   "homepage": "http://seravo.fi",
   "authors": [
     {
-      "name": "Onni Hakala",
-      "email": "onni@seravo.fi",
-      "homepage": "https://github.com/onnimonni"
+      "name": "Otto Kekäläinen",
+      "email": "otto@seravo.fi",
+      "homepage": "https://github.com/ottok"
     },
     {
       "name": "Antti Kuosmanen",
