--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "seravo/wp-palvelu-plugin",
   "type": "wordpress-muplugin",
-  "license": "MIT",
+  "license": "GPLv3",
   "description": "Enhances WordPress with WP-Palvelu.fi specific features and integrations",
   "homepage": "http://seravo.fi",
   "authors": [
@@ -17,7 +17,7 @@
     }
   ],
   "keywords": [
-    "wordpress", "wp", "wp-palvelu"
+    "wordpress", "wp", "wp-palvelu", "seravo", "seravo.com"
   ],
   "require": {
     "composer/installers": "v1.0.12"
