Re-brand plugin as Seravo plugin
Also namespace everything as Seravo and classes belonging to it in
a way that is tested to not conflict with the old wp-palvelu-plugin.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "seravo/wp-palvelu-plugin",
+  "name": "seravo/seravo-plugin",
   "type": "wordpress-muplugin",
   "license": "GPLv3",
   "description": "Enhances WordPress with Seravo.com specific features and integrations",
