--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ php:
   - nightly
 
 script:
-  # Syntax check all php fails and fail for any error text in STDERR
+  # Syntax check all php files and fail for any error text in STDERR
   - ! find . -type f -name "*.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"
