--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ php:
 
 script:
   # Syntax check all php files and fail for any error text in STDERR
-  - ! find . -type f -name "*.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"
+  - '! find . -type f -name "*.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"'
