Travis CI: Actually fail if php syntax checking fails (#56)
Earlier implementation returned exit code zero always in case the _last_ PHP file checked didn't have errors. This was no good for detecting if _any_ PHP file has an error.

This nice bash oneliner will pipe stderr to grep and emit the opposite or zero if any PHP lint errors were found.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ php:
   - nightly
 
 script:
-  - find -name '*.php' -exec php -d error_reporting=32767 -l {} \;
+  # Syntax check all php files and fail for any error text in STDERR
+  - '! find . -type f -name "*.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"'
