--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "seravo/seravo-plugin",
   "type": "wordpress-muplugin",
-  "license": "GPLv3",
+  "license": "GPL-3.0-or-later",
   "description": "Enhances WordPress with Seravo.com specific features and integrations",
   "homepage": "http://seravo.com",
   "authors": [
