--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,16 @@
   "authors": [
     {
       "name": "Otto Kekäläinen",
-      "email": "otto@seravo.fi",
+      "email": "otto@seravo.com",
       "homepage": "https://github.com/ottok"
     },
     {
-      "name": "Antti Kuosmanen",
-      "email": "antti@seravo.fi",
-      "homepage": "https://github.com/anttiviljami"
+      "name": "Leo Toikka",
+      "email": "leo@seravo.com"
+    },
+    {
+      "name": "Simo Kemppainen",
+      "email": "simo@seravo.com"
     }
   ],
   "keywords": [
