Prevent committing executable PHP files
PHP files should not have execute bit set. These have slipped past
reviews couple times, so let's just prevent merging those automatically.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,6 @@ before_install:
 script:
   # Syntax check all php files and fail for any error text in STDERR
   - '! find . -type f -name "*.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"'
+  - '! find . -type f -name "*.php" -executable 2>&1 >&- | grep "^"'
   # More extensive PHP Style Check
   - if [[ "$SNIFF" == "1" ]]; then $PHPCS_DIR/bin/phpcs -i; $PHPCS_DIR/bin/phpcs -n --standard=phpcs.xml; fi
