--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,20 @@ sudo: false
 
 language: php
 
+php:
+  - '5.6'
+  - '7.0'
+  - '7.2'
+  - '7.3'
+  - nightly
+
 matrix:
   include:
-    - 5.6
-    - 7.2
     # Arbitrary PHP version to run the sniffs against.
-    - php: '7.0'
+    - php: '7.2'
       env: SNIFF=1
+  allow_failures:
+  - php: nightly  # Old phpunit not compatible with PHP 8.0.0 yet
 
 before_install:
   # Set the target directories and versions for PHP_CodeSniffer and WP Coding Standards.
@@ -26,6 +33,5 @@ before_install:
 script:
   # Syntax check all php files and fail for any error text in STDERR
   - '! find . -type f -name "*.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"'
-  - '! find . -type f -name "*.php" -executable 2>&1 >&- | grep "^"'
   # More extensive PHP Style Check
   - if [[ "$SNIFF" == "1" ]]; then $PHPCS_DIR/bin/phpcs -i; $PHPCS_DIR/bin/phpcs -n --standard=phpcs.xml; fi
