--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
-sudo: false
-
 language: php
+os: linux
 
 php:
   - '5.6'
@@ -10,15 +9,22 @@ php:
   - '7.4'
   - nightly
 
-matrix:
+jobs:
   include:
     # Arbitrary PHP version to run the sniffs against.
     - php: '7.3'
       env: SNIFF=1
+    - name: Gnitpick
+      language: python
+      services: # none
+      install:
+      - curl -O https://raw.githubusercontent.com/Seravo/gnitpick/master/gnitpick.py
+      script:
+      - python3 ./gnitpick.py
   allow_failures:
   - php: nightly  # Old phpunit not compatible with PHP 8.0.0 yet
 
-before_install:
+install:
   # Set the target directories and versions for PHP_CodeSniffer, WP Coding Standards and PHPCS Security Audit.
   - if [[ "$SNIFF" == "1" ]]; then export PHPCS_DIR=/tmp/phpcs; export PHPCS_VERSION=3.3.2; fi
   - if [[ "$SNIFF" == "1" ]]; then export WP_SNIFFS_DIR=/tmp/wp-sniffs; export WP_SNIFFS_VERSION=2.1.0; fi
