--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,42 @@
     }
   ],
   "keywords": [
-    "wordpress", "wp", "wp-palvelu", "seravo", "seravo.com"
+    "wordpress",
+    "wp",
+    "wp-palvelu",
+    "seravo",
+    "seravo.com"
   ],
   "require": {
     "composer/installers": "^1.0",
     "enshrined/svg-sanitize": ">=0.13.3"
+  },
+  "require-dev": {
+    "rector/rector": "^0.11.16",
+    "php-stubs/wordpress-stubs": "4.7.14",
+    "php-stubs/wp-cli-stubs": "2.4.0",
+    "squizlabs/php_codesniffer": "3.6",
+    "wp-coding-standards/wpcs": "^2.3",
+    "pheromone/phpcs-security-audit": "^2.0",
+    "phpcompatibility/php-compatibility": "^9.3"
+  },
+  "scripts": {
+    "test": [
+      "vendor/bin/rector --dry-run",
+      "vendor/bin/phpcs -n"
+    ],
+    "fix": [
+      "vendor/bin/rector",
+      "vendor/bin/phpcbf -n || true"
+    ],
+    "debug": [
+      "vendor/bin/rector --dry-run --debug"
+    ],
+    "post-install-cmd": [
+      "git restore vendor/"
+    ],
+    "post-update-cmd": [
+      "git restore vendor/"
+    ]
   }
 }
