--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,3 +9,6 @@ parameters:
         - seravo-plugin.php
         - lib/
         - modules/
+    ignoreErrors:
+        # Uses func_get_args()
+        - '#^Function apply_filters(_ref_array)? invoked with [34567] parameters, 2 required\.$#'
