--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,3 +8,6 @@ parameters:
     paths:
         - seravo-plugin.php
         - src/
+    ignoreErrors:
+        # Uses func_get_args()
+        - '#^Function apply_filters(_ref_array)? invoked with [34567] parameters, 2 required\.$#'
