--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-//Ignore the macOS Finder directory properties
+// Ignore the macOS Finder directory properties
 languages/.DS_Store
 
-//Ignore Composer files
+// Ignore some Composer files. Wp-seravo-plugin-update doesn't
+// run composer install the files are kept in git.
 composer.lock
-vendor/
+!vendor/
+vendor/*
+!vendor/composer
+!vendor/enshrined
+!vendor/autoload.php
