--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,11 @@
     "pheromone/phpcs-security-audit": "^2.0",
     "phpcompatibility/php-compatibility": "^9.3"
   },
+  "autoload": {
+    "classmap": [
+      "src/lib/postbox"
+    ]
+  },
   "scripts": {
     "test": [
       "vendor/bin/rector --dry-run",
@@ -50,12 +55,6 @@
     ],
     "debug": [
       "vendor/bin/rector --dry-run --debug"
-    ],
-    "post-install-cmd": [
-      "git restore vendor/"
-    ],
-    "post-update-cmd": [
-      "git restore vendor/"
     ]
   }
 }
