Use autoload on classes api, helpers & list-table (Related: #543)

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,10 @@
   "autoload": {
     "classmap": [
       "src/lib/postbox",
-      "src/lib/ajax"
+      "src/lib/ajax",
+      "src/lib/api.php",
+      "src/lib/helpers.php",
+      "src/lib/list-table.php"
     ]
   },
   "scripts": {
