--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,8 @@
   "homepage": "http://seravo.com",
   "authors": [
     {
-      "name": "Otto Kekäläinen",
-      "email": "otto@seravo.com",
-      "homepage": "https://github.com/ottok"
-    },
-    {
-      "name": "Leo Toikka",
-      "email": "leo@seravo.com"
-    },
-    {
-      "name": "Simo Kemppainen",
-      "email": "simo@seravo.com"
+      "name": "Seravo",
+      "email": "developers@seravo.com"
     }
   ],
   "keywords": [
