--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
       "src/lib/ajax",
       "src/lib/api.php",
       "src/lib/helpers.php",
+      "src/lib/cruftremover.php",
       "src/lib/list-table.php",
       "src/lib/shell.php",
       "src/modules/pages"
