--- a/phpstan.neon
+++ b/phpstan.neon
@@ -21,6 +21,8 @@ parameters:
         - src/lib/cruftplugins-ajax.php
         - src/lib/cruftthemes-ajax.php
         - src/modules/pages/security.php
+    dynamicConstantNames:
+        - SERAVO_PLUGIN_DEBUG
     ignoreErrors:
         # Uses func_get_args()
         - '#^Function apply_filters(_ref_array)? invoked with [34567] parameters, 2 required\.$#'
