--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,29 @@
       "src/lib/cruftremover.php",
       "src/lib/list-table.php",
       "src/lib/shell.php",
-      "src/modules/pages"
+      "src/lib/security-restrictions.php",
+      "src/modules/pages",
+      "src/modules/check-site-health.php",
+      "src/modules/login-notification.php",
+      "src/modules/dashboard-widgets.php",
+      "src/modules/check-default-email.php",
+      "src/modules/check-https.php",
+      "src/modules/fixes.php",
+      "src/modules/hide-users.php",
+      "src/modules/instance-switcher.php",
+      "src/modules/noindex-domain-alias.php",
+      "src/modules/optimize-on-upload.php",
+      "src/modules/passwords.php",
+      "src/modules/purge-cache.php",
+      "src/modules/sanitize-on-upload.php",
+      "src/modules/seravotest-auth-bypass.php",
+      "src/modules/speed-test.php",
+      "src/modules/svg-support.php",
+      "src/modules/thirdparty-fixes.php",
+      "src/modules/wp-login-log.php",
+      "src/modules/wp-plugin-log.php",
+      "src/modules/wp-user-log.php",
+      "src/modules/check-php-version.php"
     ]
   },
   "scripts": {
