Rewrite logs-page

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,8 @@
       "src/lib/list-table.php",
       "src/lib/shell.php",
       "src/lib/security-restrictions.php",
+      "src/lib/logs.php",
+      "src/lib/compatibility.php",
       "src/modules/pages",
       "src/modules/check-site-health.php",
       "src/modules/login-notification.php",
