--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,18 @@ os: linux
 
 php:
   - '5.6'
-  - '7.4'
-  - '8.0'
   - 'nightly'
 
 jobs:
   include:
-    # Latest stable PHP version to run the sniffs against
+    - php: '7.1'
+      env: SNIFF=1 PHPSTAN=1
     - php: '7.4'
-      env: SNIFF=1
-    # Next PHP version with latest version of all sniffs for early detection of things that deprecate
+      env: SNIFF=1 PHPSTAN=1
     - php: '8.0'
-      env: SNIFF=1 PHPCS_VERSION=master WP_SNIFFS_VERSION=master SECURITY_SNIFFS_VERSION=master PHP_COMPAT_SNIFFS_VERSION=master
+      env: SNIFF=1 PHPSTAN=1
+    - php: '8.0'
+      env: SNIFF=1 PHPSTAN=1 PHPCS_VERSION=master WP_SNIFFS_VERSION=master SECURITY_SNIFFS_VERSION=master PHP_COMPAT_SNIFFS_VERSION=master
     - name: Gnitpick
       language: python
       services: # none
@@ -24,15 +24,20 @@ jobs:
       - python3 ./gnitpick.py
   allow_failures:
     - php: nightly
-    - env: SNIFF=1 PHPCS_VERSION=master WP_SNIFFS_VERSION=master SECURITY_SNIFFS_VERSION=master PHP_COMPAT_SNIFFS_VERSION=master
+    - env: SNIFF=1 PHPSTAN=1 PHPCS_VERSION=master WP_SNIFFS_VERSION=master SECURITY_SNIFFS_VERSION=master PHP_COMPAT_SNIFFS_VERSION=master
 
 install:
+  # Install Composer packages
+  - if [ -n "$PHPSTAN" ]; then composer install; fi
   # Install PHP CodeSniffer, WP Coding Standards and PHPCS Security Audit
   - if [ -n "$SNIFF" ]; then scripts/install-phpcs.sh; fi
 
 script:
   # Syntax check all PHP files and fail for any error text in STDERR
-  - '! find . -type f -name "*.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"'
+  - '! find src/ -type f -name "*.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"'
+  - '! find . -type f -name "seravo-plugin.php" -exec php -d error_reporting=32767 -l {} \; 2>&1 >&- | grep "^"'
+  # Static analysis to check the code for errors
+  - if [ -n "$PHPSTAN" ]; then vendor/bin/phpstan --memory-limit=512M analyse; fi
   # Style and security check using PHP CheckSniffer
   - if [ -n "$SNIFF" ]; then $HOME/.local/bin/phpcs -i; $HOME/.local/bin/phpcs -ns; fi
   # Run code and test functionality
