--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "rector/rector": "^0.11.16",
     "squizlabs/php_codesniffer": "3.6",
     "wp-coding-standards/wpcs": "^2.3",
-    "szepeviktor/phpstan-wordpress": "^0.7.5"
+    "szepeviktor/phpstan-wordpress": "^0.7.5",
+    "phpstan/phpstan-strict-rules": "^0.12.10"
   },
   "autoload": {
     "classmap": [
