--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,8 @@
 includes:
     - vendor/szepeviktor/phpstan-wordpress/extension.neon
+    - vendor/phpstan/phpstan-strict-rules/rules.neon
+
 parameters:
-    # TODO level: max
     level: 8
     scanFiles:
         - vendor/php-stubs/wp-cli-stubs/wp-cli-stubs.php
@@ -34,3 +35,5 @@ parameters:
         # Uses function_exists()
         - '#^Function jetpack_protect_get_ip not found\.$#'
     reportUnmatchedIgnoredErrors: false
+    # TODO: Remove after 5.6/7.0 not supported at all
+    checkMissingClosureNativeReturnTypehintRule : false
