--- a/phpstan.neon
+++ b/phpstan.neon
@@ -27,7 +27,7 @@ parameters:
         # Uses function_exists()
         - '#^Function jetpack_protect_get_ip not found\.$#'
         # TODO: Remove this temp fix caused by \get_sites()
-        - '#^Argument of an invalid type array|int supplied for foreach, only iterables are supported\.$#'
+        - '#^Argument of an invalid type array\|int supplied for foreach, only iterables are supported\.$#'
     reportUnmatchedIgnoredErrors: false
     # TODO: Remove after 5.6/7.0 not supported at all
     checkMissingClosureNativeReturnTypehintRule : false
