--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,12 @@
   "require": {
     "php": "^5.6 || ^7.0 || ^8.0",
     "composer/installers": "^1.0",
-    "enshrined/svg-sanitize": ">=0.13.3"
+    "enshrined/svg-sanitize": ">=0.13.3",
+    "ext-curl": "*",
+    "ext-json": "*",
+    "ext-zlib": "*",
+    "ext-fileinfo": "*",
+    "ext-redis": "*"
   },
   "config": {
     "preferred-install": {
