--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,7 @@
     "php": "^5.6 || ^7.0 || ^8.0",
     "composer/installers": "^1.0",
     "enshrined/svg-sanitize": ">=0.13.3",
-    "ext-curl": "*",
-    "ext-json": "*",
-    "ext-zlib": "*",
-    "ext-fileinfo": "*",
-    "ext-redis": "*"
+    "symfony/polyfill-php73": "^1.23"
   },
   "config": {
     "preferred-install": {
