--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
       "src/lib/logs.php",
       "src/lib/compatibility.php",
       "src/lib/shadow.php",
+      "src/lib/geoip.php",
       "src/modules/pages",
       "src/modules/check-site-health.php",
       "src/modules/dashboard-widgets.php",
