--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
       "src/lib/shadow.php",
       "src/lib/geoip.php",
       "src/modules/pages",
+      "src/modules/geologin.php",
       "src/modules/check-site-health.php",
       "src/modules/dashboard-widgets.php",
       "src/modules/fixes.php",
