Remove old CI, editor and testing configs

--- a/composer.json
+++ b/composer.json
@@ -18,32 +18,16 @@
     "seravo.com"
   ],
   "require": {
-    "php": "^7.0 || ^8.0"
+    "php": ">=7.0"
   },
   "config": {
+    "sort-packages": true,
+    "platform-check": false,
     "preferred-install": {
       "*": "dist"
     },
-    "vendor-dir": "vendor",
-    "sort-packages": true,
-    "platform-check": false,
     "allow-plugins": {
       "composer/installers": true
     }
-  },
-  "scripts": {
-    "phpcs:check": "@php ./vendor-dev/bin/phpcs -n",
-    "phpcs:fix": "@php ./vendor-dev/bin/phpcbf -n || true",
-
-    "rector:check": "@php ./vendor-dev/bin/rector --dry-run",
-    "rector:fix": "@php ./vendor-dev/bin/rector",
-
-    "phpstan:analyze": "@php ./vendor-dev/bin/phpstan --memory-limit=512M analyse",
-
-    "check": [
-      "composer phpstan:analyze",
-      "composer rector:check",
-      "composer phpcs:check"
-    ]
   }
 }
