Add PHPCS ruleset and GitHub Action workflow

--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,8 @@
     "allow-plugins": {
       "composer/installers": true
     }
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^3.7"
   }
 }
