--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,14 @@
   "require": {
     "php": ">=7.0"
   },
+  "require-dev": {
+    "php-parallel-lint/php-parallel-lint": "^1.3"
+  },
   "config": {
     "sort-packages": true,
     "platform-check": false,
     "preferred-install": {
       "*": "dist"
-    },
-    "allow-plugins": {
-      "composer/installers": true
     }
   }
 }
