--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     "php": ">=7.0"
   },
   "require-dev": {
-    "php-parallel-lint/php-parallel-lint": "^1.3"
+    "php-parallel-lint/php-parallel-lint": "^1.3",
+    "phpcompatibility/php-compatibility": "^9.3",
+    "squizlabs/php_codesniffer": "^3.7"
   },
   "config": {
     "sort-packages": true,
