--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
   "require-dev": {
     "php-parallel-lint/php-parallel-lint": "^1.3",
     "phpcompatibility/php-compatibility": "^9.3",
+    "slevomat/coding-standard": "^8.12",
     "squizlabs/php_codesniffer": "^3.7"
   },
   "config": {
@@ -30,6 +31,9 @@
     "platform-check": false,
     "preferred-install": {
       "*": "dist"
+    },
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   }
 }
