--- a/.github/workflows/php-lint.yml
+++ b/.github/workflows/php-lint.yml
@@ -12,9 +12,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint-php:
-    name: 'Lint syntax and style'
+  lint-php-syntax:
+    name: 'Lint syntax'
     runs-on: ubuntu-latest
+
     strategy:
       fail-fast: false
       matrix:
@@ -55,6 +56,29 @@ jobs:
           --checkstyle
           --exclude src/vendor
           seravo-plugin.php src | cs2pr
+
+  lint-php-style:
+    name: 'Lint style'
+    runs-on: ubuntu-latest
+
+    steps:
+      # Checkout the repository
+      - name: Setup repository
+        uses: actions/checkout@v3
+
+      # Install PHP and tools necessary
+      - name: Setup PHP
+        uses: seravo/setup-php@v2
+        with:
+          php-version: '8.2'
+          tools: cs2pr, composer
+
+      # Print Composer version
+      - run: composer --version
+
+      # Install development dependencies
+      - name: Install development dependencies
+        run: composer install --no-interaction --no-progress
 
       # Print PHP_CodeSniffer version
       - run: vendor/bin/phpcs --version
