--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "php-parallel-lint/php-parallel-lint": "^1.3",
     "phpcompatibility/php-compatibility": "^9.3",
     "slevomat/coding-standard": "^8.12",
-    "squizlabs/php_codesniffer": "^3.7"
+    "squizlabs/php_codesniffer": "^3.7",
+    "szepeviktor/phpstan-wordpress": "^1.3"
   },
   "config": {
     "sort-packages": true,
